Criando e alterando o corpo do projeto-prime-video

--- a/index.html
+++ b/index.html
@@ -12,13 +12,10 @@
                         <!-- CABEÇA DO SITE -->
 
     <header class="header">
-        <img class="logo" src="image/logo.png" alt="">
+        <img class="logo" src="image/prime-video-11.png" alt="">
 
         <div class="rede-social">
-            <a href=""><img class="rede" src="image/logo-github.jpg" alt="github"></a>
-            <a href="#"><img class="rede"  src="image/logo-instagram.jpg" alt="instagram"></a>
-            <a href="#"><img class="rede" src="image/logo-linkind.png" alt="linkind"></a>
-            <a href="#"><img class="rede" src="image/logo-steam.png" alt="steam"></a>
+
         </div>
     </header>
 
@@ -27,7 +24,7 @@
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Filmes</a></li>
                 <li><a href="#">Séries</a></li>
-                <li><a href="#">Documentários</a></li>
+                <li><a href="#">Comentários</a></li>
                 <li><a href="#">Minha Conta</a></li>
             </ul>  
         </nav>
@@ -49,13 +46,42 @@
                 </div>
             </div>
 
-            <section>
-                <div class="box-filmes">
-                    <h1>Filmes</h1>
+            <section class="filmes">
+                <div>
+                    <img class="banner" src="image/lilo.png" alt="">
+                </div>
+                <div class="texto">
+                    <h1>Filmes Disponíveis</h1>
                 </div>
             </section>
 
+             <section class="series">
+                <div class="box-series">
+                    <h1>Séries</h1>
+                    <img src="image/dragão.jpg" alt="">
+                </div>
+            </section>
+
+
+
+
         </main>
+
+
+        <footer>
+
+            <img class="rodape" src="image/logo.png" alt="">
+
+            <p>Desenvolvido por <a href="https://github.com/Eynng" target="blank">Esdras Lira</a> para fins educativos</p>
+            
+            <div class="rede-social">
+                <a href="https://github.com/Eynng" target="blank"><img class="rede" src="image/logo-github.jpg" alt="github"></a>
+                <a href="https://www.instagram.com/eynng/" target="blank"><img class="rede" src="image/logo-instagram.jpg" alt="instagram"></a>
+                <a href="https://www.linkedin.com/in/esdras-lira/" target="blank"><img class="rede" src="image/logo-linkind.png" alt="linkind"></a>
+                <a href="https://steamcommunity.com/id/eynng/" target="blank"><img class="rede" src="image/logo-steam.png" alt="steam"></a>
+            </div>
+
+        </footer>
 
 
 </body>
