Atualização do site do prime video

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <main class="container">
 
             <section>
-                <div class="principal"></div>
+                <div class="principal">
+                    
+                </div>
             </section>
 
             <section class="secundario">
@@ -55,7 +57,7 @@
 
                         <img class="banner" src="image/lilo.png" alt="">
                         <h1 class="texto2">Séries</h1>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eveniet dignissimos nesciunt explicabo enim ipsum unde officia necessitatibus, iure, esse praesentium sapiente blanditiis id voluptate velit maxime illo voluptas libero.</p> 
+                        <p class="texto2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus eveniet dignissimos nesciunt explicabo enim ipsum unde officia necessitatibus, iure, esse praesentium sapiente blanditiis id voluptate velit maxime illo voluptas libero.</p> 
 
                   </div>
             </section>
